# helloWorld

./: .gitignore  buildSolutions.bat  buildSoultions.bat  buildWithMultipleOptimizations.bat  buildWithMultipleOptimizations.sh  firstFile.txt  readme.txt
JavaDev/: .classpath  .project
JavaDev/src/: HomeNotifier.java
JavaDev/src/HomeNotifier/: HomeNotifier.java
JavaDev/src/HomeNotifier/AFP/: AFPCar.java  AFPClient.java  AFPEventProvider.java  AFPParserListPage.java
JavaDev/src/HomeNotifier/Common/: CSVHelper.java  IEventProvider.java  TelegramBotHandler.java  TelegramSender.java  WebTelegramSender.java
buildconfig/: detectOS.cmake
products/: readme.txt
solutions/: readme.txt
src/: CMakeLists.txt
src/fcgiApp/: CMakeLists.txt  main.cpp
src/fcgiApp/configuration/: lighttpd.conf
src/firebaseHelloWorld/backend/: CMakeLists.txt  Exceptions.h  FirebaseClient.cpp  FirebaseClient.h  IRequest.h  Request.cpp  Request.h  RequestFactory.cpp  RequestFactory.h  main.cpp
src/firebaseHelloWorld/client/: firebase.json  index.html
src/firebaseHelloWorld/client/css/: circular-slider.css  main.css
src/firebaseHelloWorld/client/js/: main.js
src/heap/: CMakeLists.txt  brackets.cpp  brackets.h  heap.h  helpers.h  main.cpp  measurements.h  smallExperiments.h  sort.h  streamTest.h
src/helloOpenCV/: CMakeLists.txt  example1.cpp  example1.h  example2.cpp  example2.h  main.cpp
src/helloWorld/: CMakeLists.txt  ExampleAny.h  ExampleBase.h  ExampleOptional.h  ExampleProgramOptions.h  main.cpp
src/measures/: CMakeLists.txt  ITest.h  Test1PrefixPostfix.cpp  Test1PrefixPostfix.h  Test2TryCatch.cpp  Test2TryCatch.h  Test3SIMD.cpp  Test3SIMD.h  Test4CycleOptimizations.cpp  Test4CycleOptimizations.h  Test5BranchPrediction.cpp  Test5BranchPrediction.h  TestZCycleOptimizations.cpp  TestZCycleOptimizations.h  logging.h  main.cpp  measurement.h
src/smallExamples/: CMakeLists.txt  ProgramGeneticHW.cpp  ProgramGeneticHW.h  main.cpp
src/stringToNumber/: CMakeLists.txt  StringToNumber.cpp
src/threadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  Worker.cpp  Worker.h  main.cpp
src/trace/: CMakeLists.txt  CTrace.cpp  CTrace.h
src/typeList/: CMakeLists.txt  TypeList.cpp
src/vectorUtility/: CMakeLists.txt  VectorUtility.cpp
src/zadachka/: CMakeLists.txt  Zadachka.cpp
